--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -7,6 +7,7 @@
     android:id="@+id/fragment_game_container_view"
     tools:context=".GameFragment">
 
+    <!-- Game progress bar   -->
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="match_parent"
@@ -20,6 +21,7 @@
         app:layout_constraintRight_toRightOf="parent"
         style="@android:style/Widget.ProgressBar.Horizontal" />
 
+    <!--  Level indicator  -->
     <TextView
         android:id="@+id/levelIndicator"
         android:layout_width="wrap_content"
@@ -30,6 +32,20 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/progress_bar"/>
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/timerIndicator"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/levelIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:indicatorColor="@color/timerIndicatorColor"
+        app:indicatorSize="@dimen/timerIndicatorSize"
+        app:trackColor="@color/timerTrackColor"
+        app:trackThickness="@dimen/timerIndicatorThickness"
+        android:layout_margin="@dimen/gameBoard_margin"
+        android:visibility="invisible"/>
+
     <!-- Game Board -->
     <GridLayout
         android:id="@+id/gameBoard"
@@ -39,7 +55,7 @@
         android:layout_margin="@dimen/gameBoard_margin"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/levelIndicator" >
+        app:layout_constraintTop_toBottomOf="@id/timerIndicator" >
     </GridLayout>
 
 
